fix: Some buttons cut off on narrow viewport

--- a/src/style.css
+++ b/src/style.css
@@ -107,6 +107,10 @@ input[type="number"]::-webkit-inner-spin-button {
 	gap: var(--spacing_medium);
 }
 
+.flex_allow_wrap {
+	flex-wrap: wrap;
+}
+
 .button {
 	align-items: center;
 	padding: var(--spacing_medium);
@@ -115,6 +119,7 @@ input[type="number"]::-webkit-inner-spin-button {
 	user-select: none;
 	border-radius: var(--spacing_medium);
 	background-color: var(--elev_2);
+	white-space: nowrap;
 }
 
 .button svg {
